test/corpus/keywords.txt
==================
Basic Keyword
==================
:foo
---
(source
  (keyword
    name: (symbol_name)))

==================
Namespaced Keyword (Multi-slash)
==================
:ee/rr/tt :ee/# :/
---
(source
  (keyword
    namespace: (symbol_name)
    name: (symbol_name))
  (keyword
    namespace: (symbol_name)
    name: (symbol_name))
  (keyword
    name: (symbol_name)))

==================
Auto-resolved Keyword
==================
::foo
---
(source
  (keyword
    name: (symbol_name)))

==================
Auto-resolved Namespaced
==================
::my-ns/foo
---
(source
  (keyword
    namespace: (symbol_name)
    name: (symbol_name)))

==================
Complex keywords
==================
:k/ e :/k
---
(source
      (keyword
        (symbol_name))
      (symbol
        (symbol_name))
      (keyword
        (symbol_name)))

==================
Error keywords
==================
:
---
(source (ERROR))
