test/corpus/literals.txt
==================
Booleans and Nil
==================
true false nil
---
(source
  (boolean)
  (boolean)
  (nil))

==================
Boolean/Nil vs Symbols
==================
true? false-value nilly
---
(source
  (symbol name: (symbol_name))
  (symbol name: (symbol_name))
  (symbol name: (symbol_name)))

==================
Booleans in Collections
==================
[true [false] {nil true}]
---
(source
  (vector_literal
    (boolean)
    (vector_literal (boolean))
    (map_literal
      (pair key: (nil) value: (boolean)))))

==================
Basic Regex
==================
#"^[a-z]+$"
---
(source (regex (string)))

==================
Regex with Escaped Quote
==================
#"abc\"def"
---
(source (regex (string)))

==================
Regex with Escaped Backslash (Boundary Check)
==================
#"\\\\"
---
(source (regex (string)))

==================
Regex containing Clojure delimiters
==================
#"[()\[\]{}]"
---
(source (regex (string)))

==================
Illegal Regex Gap
==================
# "should be symbol then string"
---
(source 
  (ERROR)
  (string))

================================
Symbolic Values (Inf, -Inf, NaN)
================================
[##Inf ##-Inf ##NaN]
---
(source
  (vector_literal
    (symbolic_value)
    (symbolic_value)
    (symbolic_value)))

===========================
Symbolic Values as Map Keys
===========================
{##NaN "not-a-number"}
---
(source
  (map_literal
    (pair
      key: (symbolic_value)
      value: (string))))
