test/corpus/symbols.txt
==================
Basic Symbols
==================
foo foo-bar baz_quux !? . ..
---
(source
  (symbol name: (symbol_name))
  (symbol name: (symbol_name))
  (symbol name: (symbol_name))
  (symbol name: (symbol_name))
  (symbol name: (symbol_name))
  (symbol name: (symbol_name)))

==================
Namespaced Symbols
==================
clojure.string/join ns/member e/#
---
(source
  (symbol
    namespace: (symbol_name)
    name: (symbol_name))
  (symbol
    namespace: (symbol_name)
    name: (symbol_name))
  (symbol
    namespace: (symbol_name)
    name: (symbol_name)))

==================
The Division Symbol
==================
/
---
(source
  (symbol
    name: (symbol_name)))

==================
The Plus and Minus Symbols
==================
+ - +foo/bar -ns/member +#
---
(source
  (symbol name: (symbol_name))
  (symbol name: (symbol_name))
  (symbol
    namespace: (symbol_name)
    name: (symbol_name))
  (symbol
    namespace: (symbol_name)
    name: (symbol_name))
  (symbol name: (symbol_name)))

==================
Multi-slash Symbols (Permissive)
Note: In this version, namespace is "foo" and name is "bar/baz"
==================
foo/bar/baz
---
(source
  (symbol
    namespace: (symbol_name)
    name: (symbol_name)))

==================
Single Quote inside Symbol
==================
foo'bar can't-find-it
---
(source
  (symbol name: (symbol_name))
  (symbol name: (symbol_name)))

==================
No Collision with Reader Macros
==================
'foo ^bar @baz
---
(source
  (quote
    target: (symbol name: (symbol_name)))
  (with_metadata
    meta: (metadata
      value: (symbol name: (symbol_name)))
    target: (deref
      target: (symbol name: (symbol_name)))))

==================
Metadata Missing Target (EOF)
==================
^:private
---
(source
  (with_metadata
    meta: (metadata
      value: (keyword name: (symbol_name)))))

==================
Complex symbols
==================
e/:
---
(source
  (symbol
    namespace: (symbol_name)
    name: (symbol_name)))


